Finalização de documentação de endpoints
